crates/pattern_cli/src/tui/snapshots/pattern__tui__app__tests__app_renders_empty_state.snap
---
source: crates/pattern_cli/src/tui/app.rs
expression: output
---









❯

 pattern (offline) [pattern-default]
