crates/pattern_cli/src/tui/snapshots/pattern__tui__app__tests__app_renders_with_one_batch.snap
---
source: crates/pattern_cli/src/tui/app.rs
expression: output
---
[you] Hello agent
The answer is 42.







❯ type here...

pattern (offline)
