crates/pattern_cli/src/tui/snapshots/pattern__tui__app__tests__display_note_in_panel_when_visible.snap
---
source: crates/pattern_cli/src/tui/app.rs
assertion_line: 1200
expression: output
---
[you] Hello                                                                         agent processing query...
World                                                                                panel ─────────────────────────────











❯

 @supervisor │ 1 agent │ ● connected │ panel: visible
