crates/pattern_cli/src/tui/snapshots/pattern__tui__app__tests__full_app_with_panel_hidden.snap
---
source: crates/pattern_cli/src/tui/app.rs
assertion_line: 1899
expression: output
---
[you] Hello agent

The answer is 42.






❯

 no fronting configured │ 0 agents │ 0 ctx │ ● connected
